--- a/css/style.css
+++ b/css/style.css
@@ -1431,3 +1431,12 @@ h1, h2, h3, h4, h5,
 .pagination-39291 > a {
   background: #F0B400;
   color: #fff; }
+
+/*table*/
+table, th, td {
+  border-collapse: collapse;
+  border: 1px solid #333;
+  padding:10px;
+  margin: 0 auto;
+  margin-top:20px;
+}
